adding type routes and in the swagger file
